--- a/css/styles.css
+++ b/css/styles.css
@@ -773,8 +773,36 @@ img {
     left: 0;
 }
 
+/* ФОРМЫ */
 
+textarea {
+    resize: none;
+}
 
+.form {
+    width: 528px;
+    height: 581px;
+    outline: 1px solid green;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 40px;
+}
+
+.form-field {
+    outline: 1px solid purple;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-field label {
+    margin-bottom: 5px;
+}
+
+.form-field input {
+    margin: 0;
+    padding: 0;
+}
 
 
 
