--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,9 @@ img {
     margin-left: 70px;
 }
 
+.social-list a {
+    fill: var(--background-text-color);
+}
 
 /* УРОК ПОЗИЦИОНИРОВАНИЕ */
 
@@ -641,8 +644,8 @@ img {
 }
 
 
-.portfolio-overlay:hover .overlay-hide,
-.portfolio-overlay:focus .overlay-hide {
+.lifive:hover .overlay-hide,
+.lifive:focus .overlay-hide {
     top: 100%;
     transform: translate(0%, -100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
