--- a/css/styles.css
+++ b/css/styles.css
@@ -915,6 +915,7 @@ img {
 
 .subscribe-icon {
   margin-left: 10px;
+  fill: var(--background-text-color);
 }
 
 /* ОФОРМЛЕНИЕ МОДАЛКИ */
@@ -955,6 +956,12 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-field:hover .icon-form,
+.form-field:focus .icon-form {
+  fill: var(--interactive-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form-field textarea {
   width: 100%;
   height: 120px;
@@ -974,15 +981,10 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-text {
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--secondary-text-color);
-}
-
 .contract-text {
   display: flex;
   justify-content: center;
+  align-items: center;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
@@ -1030,12 +1032,39 @@ img {
   justify-content: center;
 }
 
+.form-text {
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+}
+
 .field-form {
   position: relative;
 }
 
 .icon-form {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 45%;
+  left: 12px;
+}
+
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+}
+
+.icon-checkbox {
+  margin-right: 7px;
+}
+
+.checkbox:checked + .icon-checkbox {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox + .icon-checkbox {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
