--- a/css/styles.css
+++ b/css/styles.css
@@ -682,16 +682,17 @@ img {
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
   position: absolute;
-  top: 41%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1); /*!!!!!*/
+  transform: translate(-50%, -50%) scale(1);
+  padding: 40px 40px 40px 40px;
 
   background: var(--background-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -707,14 +708,12 @@ img {
 .close-modal {
   background-color: #ffffff;
   border: none;
+  position: absolute;
+  top: -6%;
+  right: -8%;
 }
 
 .close-button {
-  position: absolute;
-
-  top: 8px;
-  right: 8px;
-
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -722,8 +721,15 @@ img {
   cursor: pointer;
 }
 
+.close-modal:hover,
+.close-modal:focus {
+  fill: var(--interactive-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9); /*!!!!!!*/
+  transform: translate(-50%, -50%) scale(0.9);
+  transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ЧИМ МИ ЗАЙМАЄМОСЯ ОВЕРЛЕЙ */
@@ -781,78 +787,11 @@ img {
   left: 0;
 }
 
-/* ФОРМЫ */
-
-/* textarea {
-  resize: none;
-}
-
-.form {
-  width: 528px;
-  height: 581px;
-  outline: 1px solid green;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 40px;
-}
-
-.form-field {
-  outline: 1px solid purple;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.form-field label {
-  margin-bottom: 5px;
-}
-
-.form-field input {
-  margin: 0;
-  padding: 0;
-}
-
-.form-field input::placeholder {
-  color: green;
-}
-
-.group {
-  margin-bottom: 20px;
-}
-
-.group-title {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.topic-options .experience-options {
-  padding: 0px;
-  margin: 0px;
-}
-
-.topic-options li {
-  display: flex;
-  align-items: center;
-}
-
-.topic-options input[type='checkbox'] {
-}
-
-.topic-options label {
-  font-size: 20px;
-  margin-left: 10px;
-}
-
-.experience-options {
-}
-
-*/
-
 /* ФОРМА ФУТЕР*/
 
 .form-footer {
   display: flex;
-  margin-left: 93px;
+  margin-left: auto;
   background-color: #2196f3;
   background-color: var(--footer-backgroud-color);
 }
@@ -930,6 +869,7 @@ img {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   margin-bottom: 12px;
+  font-size: 20px;
 }
 
 .form-field {
@@ -938,7 +878,6 @@ img {
 }
 
 .js-speaker-form {
-  padding: 40px 40px 40px 40px;
   position: relative;
 }
 
@@ -948,16 +887,20 @@ img {
   border-radius: 4px;
   height: 40px;
   cursor: pointer;
+  padding-left: 42px;
 }
 
-.form-field input:hover,
-.form-field input:focus {
+.form-field input:hover {
   border-color: var(--interactive-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field:hover .icon-form,
-.form-field:focus .icon-form {
+.form-field:hover .icon-form {
+  fill: var(--interactive-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.field-form:focus ~ svg {
   fill: var(--interactive-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1046,6 +989,7 @@ img {
   position: absolute;
   top: 45%;
   left: 12px;
+  pointer-events: none;
 }
 
 .checkbox {
@@ -1062,6 +1006,8 @@ img {
 .checkbox:checked + .icon-checkbox {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 0.2px solid var(--background-text-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox + .icon-checkbox {
